--- a/MiBandImport/MiBandImport.csproj
+++ b/MiBandImport/MiBandImport.csproj
@@ -52,6 +52,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataPanels\PanelDayDetail.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="DataPanels\PanelDetail1.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -64,6 +67,7 @@
     <Compile Include="DataPanels\PanelGeneralTab.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="EventArgsClasses\EventArgsSelectedDayChanged.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
