--- a/MiBand/MiBand.csproj
+++ b/MiBand/MiBand.csproj
@@ -11,7 +11,7 @@
     <AssemblyName>MiBand</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SupportedCultures>de;en</SupportedCultures>
+    <SupportedCultures>de</SupportedCultures>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -54,6 +54,11 @@
     <Compile Include="MiBandRawUser.cs" />
     <Compile Include="MiBandUser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="SQLite.Interop.dll">
@@ -64,28 +69,24 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
+  </ItemGroup>
+  <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.de.resx">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.de.xlf</DependentUpon>
       <culture>de</culture>
     </EmbeddedResource>
-    <EmbeddedResource Include="Properties\Resources.en.resx">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.en.xlf</DependentUpon>
-      <culture>en</culture>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="Properties\Resources.resx" />
   </ItemGroup>
   <ItemGroup>
     <XliffResource Include="Properties\Resources.de.xlf">
       <Generator>XliffResxGenerator</Generator>
       <LastGenOutput>Resources.de.resx</LastGenOutput>
-    </XliffResource>
-    <XliffResource Include="Properties\Resources.en.xlf">
-      <Generator>XliffResxGenerator</Generator>
-      <LastGenOutput>Resources.en.resx</LastGenOutput>
     </XliffResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
