Added Parameter Height und Wight

--- a/MiBandImport/App.config
+++ b/MiBandImport/App.config
@@ -40,6 +40,12 @@
             <setting name="PhoneTimeOut" serializeAs="String">
                 <value>5000</value>
             </setting>
+            <setting name="Weight" serializeAs="String">
+                <value>93.2</value>
+            </setting>
+            <setting name="Hight" serializeAs="String">
+                <value>183</value>
+            </setting>
         </MiBandImport.Properties.Settings>
     </userSettings>
 </configuration>
