--- a/MiBandImport/App.config
+++ b/MiBandImport/App.config
@@ -35,16 +35,16 @@
                 <value>0</value>
             </setting>
             <setting name="WorkDirOnPhone" serializeAs="String">
-                <value>/storage/sdcard1/Backup/MiBand/</value>
+                <value>/storage/sdcard1/</value>
             </setting>
             <setting name="PhoneTimeOut" serializeAs="String">
                 <value>5000</value>
             </setting>
             <setting name="Weight" serializeAs="String">
-                <value>93.2</value>
+                <value>85</value>
             </setting>
             <setting name="Hight" serializeAs="String">
-                <value>183</value>
+                <value>180</value>
             </setting>
         </MiBandImport.Properties.Settings>
     </userSettings>
