--- a/MiBandImport/MiBandImport.csproj
+++ b/MiBandImport/MiBandImport.csproj
@@ -67,6 +67,9 @@
     <Compile Include="DataPanels\PanelGeneralTab.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="DataPanels\PanelStatistics.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="EventArgsClasses\EventArgsPersonalWeight.cs" />
     <Compile Include="EventArgsClasses\EventArgsPersonalHeight.cs" />
     <Compile Include="EventArgsClasses\EventArgsDaysToDisplay.cs" />
@@ -78,9 +81,18 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormExport.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormExport.Designer.cs">
+      <DependentUpon>FormExport.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
+    <EmbeddedResource Include="DataPanels\PanelStatistics.resx">
+      <DependentUpon>PanelStatistics.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.de.resx">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -90,6 +102,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormExport.de.resx">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>FormExport.de.xlf</DependentUpon>
+      <culture>de</culture>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormExport.resx">
+      <DependentUpon>FormExport.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.de.resx">
       <AutoGen>True</AutoGen>
@@ -163,6 +184,10 @@
     <XliffResource Include="Form1.de.xlf">
       <Generator>XliffResxGenerator</Generator>
       <LastGenOutput>Form1.de.resx</LastGenOutput>
+    </XliffResource>
+    <XliffResource Include="FormExport.de.xlf">
+      <Generator>XliffResxGenerator</Generator>
+      <LastGenOutput>FormExport.de.resx</LastGenOutput>
     </XliffResource>
     <XliffResource Include="Properties\Resources.de.xlf">
       <Generator>XliffResxGenerator</Generator>
